--- a/css/_base.scss
+++ b/css/_base.scss
@@ -535,13 +535,37 @@ body {
 
 	.checkoutWrapper {
 		// min-height: 100vh;
+		.continueShopping {
+			// position: absolute;
+			// top:px;
+			background-color: rgb(45, 58, 196);
+			color: #ffffff;
+			width: 200px;
+			height: 40px;
+			text-align: center;
+			position: relative;
+			border-radius: 50px;
+			border: none;
+			img {
+				height: 30px;
+				position: absolute;
+				left: -8px;
+				top: 5px;
+				
+			}
+		}
+		.continueShopping:hover {
+			background-color: rgb(94, 100, 173);
+		}
 		.checkoutSec {
 			width: 85vw;
 			margin: auto;
 			background-color: rgb(252, 246, 246);
 			border-radius: 5px;
 			margin-bottom: 10rem;
+			position: relative;
 			// display: flex;
+
 			.productCheckoutSummary {
 				padding: 0;
 				.productAdded {
