--- a/css/_base.scss
+++ b/css/_base.scss
@@ -1,11 +1,5 @@
 .toggleHide {
-	clip: rect(0 0 0 0);
-	clip-path: inset(50%);
-	height: 1px;
-	overflow: hidden;
-	position: absolute;
-	white-space: nowrap;
-	width: 1px;
+	display: none;
 }
 //Dark Theme
 // background-image: linear-gradient(
@@ -122,6 +116,7 @@ body {
 					padding: 10px;
 					z-index: 0;
 				}
+
 				.cartCloseBtn {
 					// justify-content: center;
 					position: absolute;
@@ -152,33 +147,35 @@ body {
 					padding: 0;
 					display: flex;
 					justify-content: space-evenly;
-					border-bottom: 1px solid #fff;
+					// border-bottom: 1px solid #fff;
 					// font-size: 2rem;
 					margin: 0;
 				}
 				.productPreviewSummary {
-					li {
+					.productsInCart {
 					display: flex;
 					justify-content: space-evenly;
-					// flex-direction: column;
 					padding: 10px;
-					// font-size: 1rem;
-					
-					// justify-content: space-evenly;
-					border-bottom: 1px solid #fff;
-					// ul {
-					// 	margin-left: 2px;
-					// }
+					background-color: white;
+          border-radius:  100px 0px 100px 0px;
+					// border-bottom: 1px solid #fff;
+					margin: 0.5rem;
 				}
+				.productsInCart:nth-child(2n) {
+					border-radius: 0px 100px 0px 100px ;
+				}
+
 					li::marker {
 						content: '';
 					  }
+
 					.productPreviewImage {
-						grid-column: 1 / span 1;
-						border-radius: 3px;
+						border-radius: 20px;
 						width: 100px;
 						height: 100px;
+						object-fit: cover;
 					}
+
 					.previewProductTitle,
 					.previewProductPrice {
 						margin-top: 15px;
@@ -186,10 +183,9 @@ body {
 					}
 
 					.previewProductTitle {
-						// margin:0;
 					}
 					.previewProductPrice {
-						// margin: 0;
+						font-size: 1.5rem;
 					}
 					.productAmountActions {
 						margin-top: 1rem;
@@ -221,18 +217,7 @@ body {
 					}
 					.previewProductRemoval {
 						border-radius: 3px;
-						// z-index: 3;
-						// position: relative;
-						// height: 25px;
-						// width: 30px;
-						// .productRemoveImg {
-						// 	height: 50px;
-						// 	// z-index: 0;
-						// 	// position: absolute;
-						// 	top: -13px;
-						// 	left: 0;
-						// 	width: 20px;
-						// }
+
 					}
 					.previewProductRemoval:hover,
 					.productAmountSub:hover,
@@ -240,6 +225,14 @@ body {
 						background-color: rgb(172, 168, 168);
 					}
 				}
+        .cartProductSum {
+          text-align: left;
+          background-color: white;
+          width: 30%;
+          border-radius: 0 10px 10px 0;
+          // border: 5px solid rgba($color: #030303, $alpha: 0.5);
+          // border-left: none ;
+        }
 
 				.checkoutBtn {
 					border: none;
