🔧 Adjusted validation function

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -641,7 +641,8 @@ body {
 
 			.checkoutInput {
 				border-radius: 5px;
-				border: 1px solid #f5c24c;
+				border: none;
+				outline: 1px solid #f5c24c;
 				padding: 3px;
 			}
 			h3 {
@@ -670,9 +671,30 @@ body {
 					// width: 30%;
 					// margin-bottom: 1rem;
 				}
-				input {
+				.formInput {
 					grid-column: 3 / span 2;
-
+					color: red;
+					font-weight: 600;
+					input {
+						width: 100%;
+						// outline: 2px solid black;
+						// outline: 2px solid black;
+					}
+					.fieldValid {
+						// background-color: ivory;
+						// border: none;
+						outline: 2px solid rgb(54, 255, 47);
+						// border-radius: 5px;
+					  }
+					.fieldInvalid {
+						background-color: ivory;
+						// border: none;
+						outline: 2px solid red;
+						// border-radius: 5px;
+					  }
+					  p {
+						margin-bottom: 0;
+					  }
 					// border:1px solid rgb(172, 64, 64)
 					// margin-bottom: 1rem;
 					// width: 100%;
