--- a/css/style.scss
+++ b/css/style.scss
@@ -3,3 +3,13 @@
 @import "font";
 
 @import "base";
+
+@import "darktheme";
+
+@media screen and (min-width: 768px) {
+    @import "tablet";
+  }
+  
+  @media screen and (min-width: 1024px) {
+      @import "desktop";
+    }
