--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -3,13 +3,20 @@ body {
 		.productSec {
 			.productContainer {
 				display: grid;
-				grid-template-columns: repeat(4, 1fr);
+				grid-template-columns: repeat(6, 1fr);
 				.productArticles {
 					grid-column: span 2;
-					.articleBtn {
-						display: flex;
-						justify-content: space-between;
-					}
+				}
+
+			}
+            .addedToCart {
+				.addedBtn {
+                    position: absolute;
+                    right: 0;
+                    top: 0;
+					height: 50px;
+					width: 30%;
+                    height: 100%;
 				}
 			}
 		}
